@@ -1,3 +1,5 @@
+2005/12/28 -- released version 20051228_trunk
+
 2005/12/27 -- released version 20051227_trunk
 
 2005/12/26 -- released version 20051226_trunk
